Split feedback icon into a seperate controller. It still exists in the playlist-controller for mobile collapse, but is hidden by default. Still need to address some UI issues with placement and form operation.

--- a/docs/sites/all/themes/ssd/sass/mobile.scss
+++ b/docs/sites/all/themes/ssd/sass/mobile.scss
@@ -35,6 +35,15 @@
     -moz-border-radius: 0;
     text-align: center;
   }
+  #feedback-controller {
+    display: none;
+  }
+  #playlist-controller #playlist-feedback {
+    display: inline-block;
+  }
+  .module-playlist-controller {
+    display: block;
+  }
   #block-feedback-form {
     /* bottom: 80px; */
   }
