--- a/docs/sites/all/themes/ssd/sass/style-rtl.scss
+++ b/docs/sites/all/themes/ssd/sass/style-rtl.scss
@@ -22,6 +22,14 @@
   left: 20px;
   right: auto;
 }
+#feedback-controller {
+  right: 20px;
+  left: auto;
+}
+#block-feedback-form {
+  right: 20px;
+  left: auto;
+}
 #playlist-controller #playlist-next {
   margin-right: 0;
   margin-left: 5px;
